; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_IsEncryptedP12.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_IsEncryptedP12.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsEncryptedP12(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %19

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @ParseP12(i32* %10, i32** %4, i32** %5, i32* null)
  %12 = icmp eq i32 %11, 1
  br i1 %12, label %13, label %18

13:                                               ; preds = %9
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @FreeX(i32* %14)
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @FreeK(i32* %16)
  store i32 0, i32* %2, align 4
  br label %19

18:                                               ; preds = %9
  store i32 1, i32* %2, align 4
  br label %19

19:                                               ; preds = %18, %13, %8
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @ParseP12(i32*, i32**, i32**, i32*) #1

declare dso_local i32 @FreeX(i32*) #1

declare dso_local i32 @FreeK(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
